--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-paypal-button": "^4.1.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
@@ -34,7 +35,6 @@
     "eslint-plugin-react": "^7.21.5",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
-    "husky": "^8.0.1",
     "mini-css-extract-plugin": "^1.1.1",
     "prettier": "^2.1.2",
     "webpack": "^5.1.3",
