--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leaflet": "^1.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-leaflet": "^4.1.0",
     "react-paypal-button": "^4.1.1",
     "react-router-dom": "^5.2.0"
@@ -28,6 +29,7 @@
     "@babel/preset-react": "^7.12.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^5.0.0",
     "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
